fixed sizing and font of text to make it more readable and fixed some ui issues

--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,10 @@ body {
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);
 }
 
+.more-info-modal {
+  font-family: "Georgia", sans-serif; 
+}
+
 body,
 html {
   margin: 0;
